@@ -75,6 +75,9 @@
        of the original icon. (Lazare Inepologlou)
 - NEW: Revision graph: Show range of last committed and range 
        of current revisions in working copy (Stefan Fuhrmann)
+- NEW: TortoiseUDiff accepts input from a pipe. It can be used now
+       like this:
+       $ svn diff | TortoiseUDiff.exe -p
 - BUG: Merged revisions must be counted only 
        once in stats (Stefan Fuhrmann)
 - BUG: Relative Webviewer urls didn't work from the 
